# QuickRecorder

./: .gitignore  CMakeLists.txt  README.md
res/: QuickRecorder_zh_CN.ts  qml.qrc
res/layout/: WindowScreenCapture.qml  WindowSelectArea.qml  main.qml
res/view/: ButtonImage.qml  ItemSelectArea.qml
src/: ScreenImageProvider.cpp  ScreenImageProvider.h  aencode.cpp  aencode.h  gdigrab.cpp  gdigrab.h  main.cpp  tool.cpp  tool.h
